add permission and remove permission from role small fixes
