# internal/handler/v1/request/permission.go
@@ -1,5 +1,9 @@
 package request
 
 type PermissionCreate struct {
-	Name   string `json:"name" validate:"required,min=5"`
+	Name string `json:"name" validate:"required,min=5,max=50"`
+}
+
+type PermissionUpdate struct {
+	Name string `json:"name" validate:"required,min=5,max=50"`
 }
