# internal/handler/v1/request/role.go
@@ -1,5 +1,9 @@
 package request
 
 type RoleCreate struct {
-	Name string `json:"name" validate:"required,min=5"`
+	Name string `json:"name" validate:"required,min=5,max=50"`
+}
+
+type RoleUpdate struct {
+	Name string `json:"name" validate:"required,min=5,max=50"`
 }
