# internal/handler/v1/role.go
@@ -32,7 +32,10 @@ func newRole(
 	mux.HandleFunc("GET "+prefix, authMwr.MwrFunc(re.list))
 	mux.HandleFunc("POST "+prefix, authMwr.MwrFunc(re.create))
 	mux.HandleFunc("GET "+prefix+"/{id}", authMwr.MwrFunc(re.show))
+	mux.HandleFunc("PATCH "+prefix+"/{id}", authMwr.MwrFunc(re.update))
 	mux.HandleFunc("DELETE "+prefix+"/{id}", authMwr.MwrFunc(re.delete))
+	mux.HandleFunc("POST "+prefix+"/{id}/permissions/{permissionID}", authMwr.MwrFunc(re.addPermission))
+	mux.HandleFunc("DELETE "+prefix+"/{id}/permissions/{permissionID}", authMwr.MwrFunc(re.removePermission))
 }
 
 // @Summary roles list
@@ -115,6 +118,36 @@ func (re *role) show(w http.ResponseWriter, r *http.Request) {
 	re.rb.JsonSuccess(w, r, http.StatusOK, role)
 }
 
+// @Summary update role by id
+// @Tags roles
+// @Security BearerAuth
+// @Router /v1/roles/{id} [patch]
+// @Accept json
+// @Param id path string true "role id"
+// @Param body body request.RoleUpdate true "role update request"
+// @Produce json
+// @Success 200 {object} response.success{data=model.Role}
+func (re *role) update(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.role.update"
+
+	id := r.PathValue("id")
+	var req request.RoleUpdate
+
+	err := re.rp.ParseBody(r, &req)
+	if err != nil {
+		re.rb.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	role, err := re.roleSrvc.Update(r.Context(), id, req.Name)
+	if err != nil {
+		re.rb.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	re.rb.JsonSuccess(w, r, http.StatusOK, role)
+}
+
 // @Summary delete role by id
 // @Tags roles
 // @Security BearerAuth
@@ -132,4 +165,46 @@ func (re *role) delete(w http.ResponseWriter, r *http.Request) {
 	}
 
 	re.rb.JsonSuccess(w, r, http.StatusNoContent, nil)
+}
+
+// @Summary add permission
+// @Tags roles
+// @Security BearerAuth
+// @Router /v1/roles/{id}/permissions/{permissionID} [post]
+// @Param id path string true "role id"
+// @Param permissionID path string true "permission id"
+// @Success 200 {object} response.success{data=model.Role}
+func (re *role) addPermission(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.role.addPermission"
+
+	id := r.PathValue("id")
+	permissionID := r.PathValue("permissionID")
+	role, err := re.roleSrvc.AddPermission(r.Context(), id, permissionID)
+	if err != nil {
+		re.rb.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	re.rb.JsonSuccess(w, r, http.StatusOK, role)
+}
+
+// @Summary remove permission
+// @Tags roles
+// @Security BearerAuth
+// @Router /v1/roles/{id}/permissions/{permissionID} [delete]
+// @Param id path string true "role id"
+// @Param permissionID path string true "permission id"
+// @Success 200 {object} response.success{data=model.Role}
+func (re *role) removePermission(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.role.removePermission"
+
+	id := r.PathValue("id")
+	permissionID := r.PathValue("permissionID")
+	role, err := re.roleSrvc.RemovePermission(r.Context(), id, permissionID)
+	if err != nil {
+		re.rb.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	re.rb.JsonSuccess(w, r, http.StatusOK, role)
 }
